fix(rt-23577): reu alumni; add '22, tweak '21, css

--- a/web-content/root/education/undergrads-grads/reu/alumni-archied-projects/2021.html
+++ b/web-content/root/education/undergrads-grads/reu/alumni-archied-projects/2021.html
@@ -1,9 +1,3 @@
-<style id="style--reu-alumni" type="text/css">
-.reu-alumni-list a {
-        white-space: nowrap;
-    }</style>
-<style class="darkreader darkreader--sync" media="screen" type="text/css">
-</style>
 <section class="reu-alumni-list">
 	<h3>
 		REU Alumni</h3>
@@ -11,50 +5,50 @@
 		2021 Cohort</h4>
 	<p>
 		<img class="img-responsive" src="/documents/1084364/1535368/reu-alumni-2021.png" /></p>
-	<p>
-		<strong>STUDENT POSTERS</strong></p>
+	<h5>
+        STUDENT POSTERS</h5>
 	<ul>
 		<li style="margin-bottom:10px;">
-			Abigail Santiago, Computer Science, Davidson College<br />
+			<strong>Abigail Santiago</strong><br /> Computer Science — Davidson College <br />
 			<a href="/documents/1084364/2052250/Santiago_Abigail.png/" target="_blank">Investigating Bias in Resource Allocation for Homelessness/Houselessness Prevention and Intervention</a></li>
 		<li style="margin-bottom:10px;">
-			Courtney Smith, Security and Risk Analysis Communications, Pennsylvania State University<br />
+			<strong>Courtney Smith</strong><br /> Security and Risk Analysis Communications — Pennsylvania State University <br />
 			<a href="/documents/1084364/2052250/Smith_Courtney.png/" target="_blank">COVID-19's Impact on the Increase of Anti-Asian Hate Rhetoric on Twitter in the United States</a></li>
 		<li style="margin-bottom:10px;">
-			Roshuna Harris, Chemistry, University of Arkansas at Pine Bluff<br />
+			<strong>Roshuna Harris</strong><br /> Chemistry — University of Arkansas at Pine Bluff <br />
 			<a href="/documents/1084364/2052250/Harris_Roshuna.png/" target="_blank">Infant &amp; Maternal Mortality and Morbidity: African American/Black and Indigenous Women</a></li>
 		<li style="margin-bottom:10px;">
-			Melissa Ignacio, Computer Science, University of California San Diego<br />
+			<strong>Melissa Ignacio</strong><br /> Computer Science — University of California San Diego <br />
 			<a href="/documents/1084364/2052250/Ignacio_Melissa.pdf/" target="_blank">An Interactive Exploration of Conductivity in Water Quality using Virtual Reality</a></li>
 		<li style="margin-bottom:10px;">
-			Jane Kavounas, Engineering and Mathematics, Swarthmore College<br />
+			<strong>Jane Kavounas</strong><br /> Engineering and Mathematics — Swarthmore College <br />
 			<a href="/documents/1084364/2052250/Kavounas_Jane.pdf/" target="_blank">AR: Know where you are, know where you're safe</a></li>
 		<li style="margin-bottom:10px;">
-			Melia Okimoto, Environmental Science, Chaminade University of Honolulu<br />
+			<strong>Melia Okimoto</strong><br /> Environmental Science — Chaminade University of Honolulu <br />
 			<a href="/documents/1084364/2052250/Okimoto_Melia.pdf/" target="_blank">Investigating the Environmental Effects of Tourism in Hawaiʻi</a></li>
 		<li style="margin-bottom:10px;">
-			Cailey Filipo, Biochemistry, Chaminade University of Honolulu<br />
+			<strong>Cailey Filipo</strong><br /> Biochemistry — Chaminade University of Honolulu <br />
 			<a href="/documents/1084364/2052250/Filipo_Cailey.pdf/" target="_blank">The Impact of Flint, Michigan's Lead Water Crisis on Fetal &amp; Child Development</a></li>
 		<li style="margin-bottom:10px;">
-			Raul Vides Sarmiento, Electrical and Computer Engineering, University of North Texas<br />
+			<strong>Raul Vides Sarmiento</strong><br /> Electrical and Computer Engineering — University of North Texas <br />
 			<a href="/documents/1084364/2052250/Vides_Raul.pdf/" target="_blank">Health Conditions Among Different Incomes Throughout the United States</a></li>
 		<li style="margin-bottom:10px;">
-			Marcus Bedeau, Computer Science, Florida International University<br />
+			<strong>Marcus Bedeau</strong><br /> Computer Science — Florida International University <br />
 			<a href="/documents/1084364/2052250/Bedeau_Marcus.png/" target="_blank">Using a Graphic Database for COVID-19 Data Analysis</a></li>
 		<li style="margin-bottom:10px;">
-			Antonio Ramos, Computer Science, Pomona College<br />
+			<strong>Antonio Ramos</strong><br /> Computer Science — Pomona College <br />
 			<a href="/documents/1084364/2052250/Ramos_Antonio.png/" target="_blank">Using SEIR Model to Analyse Mask Mandate Lift in Austin</a></li>
 		<li style="margin-bottom:10px;">
-			Jordan Williams, Computer Science, Grambling State University<br />
+			<strong>Jordan Williams</strong><br /> Computer Science — Grambling State University <br />
 			<a href="/documents/1084364/2052250/Williams_Jordan_.png/" target="_blank">U.S. Rental Moratorium: The Likelihood of Having to Leave this House in the Next Two Months Due to Eviction</a></li>
 		<li style="margin-bottom:10px;">
-			Ibrohim Nosirov, Computer Science, Colorado School of Mines<br />
+			<strong>Ibrohim Nosirov</strong><br /> Computer Science — Colorado School of Mines <br />
 			<a href="/documents/1084364/2052250/Nosirov_Ibrohim.png/" target="_blank">Machine Learning-based Framework for Behavior Tracking</a></li>
 		<li style="margin-bottom:10px;">
-			Alii Napoleon, Data Science, Chaminade University of Honolulu<br />
+			<strong>Alii Napoleon</strong><br /> Data Science — Chaminade University of Honolulu <br />
 			<a href="/documents/1084364/2052250/Napoleon_Alii.pdf/" target="_blank">The Consumption of Predatory Pelagic Fish and the Incidence of Diabetes in Modern Kanaka Maoli (Native Hawaiians)</a></li>
 		<li style="margin-bottom:10px;">
-			Nary Seth, Data Science, Chaminade University of Honolulu<br />
+			<strong>Nary Seth</strong><br /> Data Science — Chaminade University of Honolulu <br />
 			<a href="/documents/1084364/2052250/Nary_Seth.png/" target="_blank">The Effects of COVID-19 in NY &amp; Florida</a></li>
 	</ul>
 </section>
