fix(rt-23577): save alumni-archived-projects list

--- a/web-content/root/education/undergrads-grads/reu/alumni-archived-projects--link-list.html
+++ b/web-content/root/education/undergrads-grads/reu/alumni-archived-projects--link-list.html
@@ -1,11 +1,14 @@
+<hr />
 <h4>
 	Cohorts from Previous Years</h4>
 <ul>
 	<li>
+		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2022">REU Almuni 2022</a></li>
+	<li>
 		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2021">REU Almuni 2021</a></li>
 	<li>
 		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2020">REU Almuni 2020</a></li>
-<li>
+	<li>
 		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2019">REU Almuni 2019</a></li>
 	<li>
 		<a href="/education/undergrads-grads/reu/alumni-archived-projects/2016">REU Almuni 2016</a></li>
