fix(rt-23587): epic cert tableau polish

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/certification.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/certification.html
@@ -87,13 +87,8 @@
 	</ul>
 	<h5>
 		Currently Certified Teachers</h5>
-	<!-- Tableau Snippet: Start --><!-- SEE: https://help.tableau.com/current/pro/desktop/en-us/embed_list.htm --><!-- TACC: For responsiveness, added class ` embed-responsive-item` -->
-	<style type="text/css">
-.tableauPlaceholder.embed-responsive-item {
-		/* To overwrite inline styles dynamically-added by Tableau */
-		position: absolute !important;
-	}	</style>
-	<!-- TACC: For responsiveness, added class ` embed-responsive-item` -->
+	<!-- Tableau Snippet: Start --><!-- SEE: https://help.tableau.com/current/pro/desktop/en-us/embed_list.htm -->
+	<!-- TACC: For responsiveness, added class ` embed-responsive` -->
 	<div
 	class="tableauPlaceholder embed-responsive"
 	id="viz1615245374896"
