--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test-tableau.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test-tableau.html
@@ -5,11 +5,10 @@
         Heading Lvl. 4</h4>
     <h5>
         Headling Lvl. 5</h5>
-    <!-- Tableau Snippet: Start --><!-- TACC: For responsiveness, added class ` embed-responsive` -->
+    <!-- Tableau Snippet: Start --><!-- TACC: For responsiveness, added class ` embed-responsive` --><!-- TACC: For consistency (with certification.html), removed attribute `style="position: relative"` -->
     <div
-        class="tableauPlaceholder"
+        class="tableauPlaceholder embed-responsive"
         id="viz1666642874503"
-        style="position: relative"
     >
         <noscript
         ><a href="#"
@@ -37,24 +36,24 @@
             <param name="display_overlay" value="yes" />
             <param name="display_count" value="yes" />
             <param name="language" value="en-US" />
-            </object>
+        </object>
     </div>
     <script type="text/javascript">
-        var divElement = document.getElementById("viz1666642874503");
-        var vizElement = divElement.getElementsByTagName("object")[0];
-	    /* TACC: For responsiveness, removed width manipulation */
-        if (divElement.offsetWidth > 800) {
-            // vizElement.style.width = "1366px";
-            vizElement.style.height = "795px";
-        // } else if (divElement.offsetWidth > 500) {
-        //     vizElement.style.width = "1366px";
-        //     vizElement.style.height = "795px";
-        } else {
-            // vizElement.style.width = "100%";
-            vizElement.style.height = "1877px";
-        }
-        var scriptElement = document.createElement("script");
-        scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+    var divElement = document.getElementById("viz1666642874503");
+    var vizElement = divElement.getElementsByTagName("object")[0];
+    /* TACC: For responsiveness, removed width manipulation */
+    if (divElement.offsetWidth > 800) {
+        // vizElement.style.width = "1366px";
+        vizElement.style.height = "795px";
+    // } else if (divElement.offsetWidth > 500) {
+    //     vizElement.style.width = "1366px";
+    //     vizElement.style.height = "795px";
+    } else {
+        // vizElement.style.width = "100%";
+        vizElement.style.height = "1877px";
+    }
+    var scriptElement = document.createElement("script");
+    scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);
     </script><!-- Tableau Snippet: End -->
 </section>
