docs(rt-23587): epic test tableau comment

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
@@ -41,7 +41,7 @@
     <script type="text/javascript">
     var divElement = document.getElementById("viz1666642874503");
     var vizElement = divElement.getElementsByTagName("object")[0];
-    /* TACC: For responsiveness, removed width manipulation */
+    /* TACC: To fit in compressed EPIC page, removed most width manipulation */
     if (divElement.offsetWidth > 800) {
         // vizElement.style.width = "1366px";
         vizElement.style.height = "795px";
