chore: epic tableau test page tweak

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
@@ -1,10 +1,8 @@
 <section class="weteachcs-content">
     <h3>
         Heading Lvl. 3</h3>
-    <h4>
-        Heading Lvl. 4</h4>
-    <h5>
-        Headling Lvl. 5</h5>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel lacus est. Nunc tempor risus vel nulla semper, in auctor justo bibendum. Proin mattis condimentum tempus. Sed interdum ut ligula vel lacinia. Integer efficitur porta augue vitae semper. Nunc viverra a libero vel iaculis. Praesent bibendum enim enim, sed eleifend neque vestibulum eget. Sed sed varius diam. Mauris vitae auctor justo. Nunc id pulvinar tellus.</p>
     <!-- Tableau Snippet: Start --><!-- TACC: For responsiveness, added class ` embed-responsive` --><!-- TACC: For consistency (with certification.html), removed attribute `style="position: relative"` -->
     <div
         class="tableauPlaceholder embed-responsive"
@@ -18,7 +16,6 @@
             style="border: none" /></a></noscript
         ><object class="tableauViz" style="display: none">
             <!-- TACC: For responsiveness, prevent wide layouts inside iframe -->
-            <param name="device" value="phone"/>
             <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
             <param name="embed_code_version" value="3" />
             <param name="site_root" value="" />
