chore: rt-23771 weteach sidebar (save from cms)

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--sidebar.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--sidebar.html
@@ -8,5 +8,21 @@
 	<li>
 		Nathalie Beausoleil, Event Coordinator and CIP Coordinator</li>
 	<li>
-		Sheryl Roehl, Project Manager</li>
+        Sheryl Roehl, Project Manager</li>
+    <li>
+        Amy Carrell, Director of Outreach</li>
+    <li>
+        John B. Owen, CS Project Manager</li>
+    <li>
+        Nathalie Beausoleil, EPIC Senior Program Coordinator</li>
+    <li>
+        Sheryl Roehl, EPIC Partnership Coordinator</li>
+    <li>
+        Allen Antoine, CS Professional Development Specialist</li>
+    <li>
+        Judy Lau, CS Professional Development Coordinator</li>
+    <li>
+        Kirby Rankin, CS Professional Development Specialist</li>
+    <li>
+        Joy Schwartz, CS Professional Development Specialist</li>
 </ul>
