chore: rt-23771 weteach sidebar, link staff pages
This is extra. Prepare to roll back if team does not like this change.

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--sidebar.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--sidebar.html
@@ -2,19 +2,19 @@
 	WeTeach_CS was founded and directed by Carol L. Fletcher, Ph.D. The WeTeach_CS team includes the following individuals:</p>
 <ul style="font-size:12px; font-style:italic;">
     <li>
-        Amy Carrell, Director of Outreach</li>
+        <a href="/about/directory/amy-carrell">Amy Carrell</a>, Director of Outreach</li>
     <li>
-        John B. Owen, CS Project Manager</li>
+        <a href="/about/directory/john-owen">John B. Owen</a>, CS Project Manager</li>
     <li>
-        Nathalie Beausoleil, EPIC Senior Program Coordinator</li>
+        <a href="/about/directory/nathalie-beausoleil">Nathalie Beausoleil</a>, EPIC Senior Program Coordinator</li>
     <li>
-        Sheryl Roehl, EPIC Partnership Coordinator</li>
+        <a href="/about/directory/sheryl-roehl">Sheryl Roehl</a>, EPIC Partnership Coordinator</li>
     <li>
-        Allen Antoine, CS Professional Development Specialist</li>
+        <a href="/about/directory/allen-antoine">Allen Antoine</a>, CS Professional Development Specialist</li>
     <li>
-        Judy Lau, CS Professional Development Coordinator</li>
+        <a href="/about/directory/judy-lau">Judy Lau</a>, CS Professional Development Coordinator</li>
     <li>
-        Kirby Rankin, CS Professional Development Specialist</li>
+        <a href="/about/directory/kirby-rankin">Kirby Rankin</a>, CS Professional Development Specialist</li>
     <li>
-        Joy Schwartz, CS Professional Development Specialist</li>
+        <a href="/about/directory/joy-schwartz">Joy Schwartz</a>, CS Professional Development Specialist</li>
 </ul>
