--- a/web-content/root/education/k-12-outreach/teachers/epic/stem-evaluation-services.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/stem-evaluation-services.html
@@ -17,6 +17,8 @@
         <li>
             <a href="/about/directory/miriam-jacobson">Miriam Jacobson</a>, Research Associate</li>
         <li>
+            <a href="/about/directory/madeline-haynes">Madeline Haynes</a>, Research Associate</li>
+        <li>
             Graduate Research Assistants</li>
     </ul>
     <hr />
