--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs.html
@@ -133,11 +133,25 @@ Style guide: components.weteachcs.card
 	</div>
 	<div class="row  weteachcs-card">
 		<figure class="col-sm-5  weteachcs-card__figure">
-			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+			<div style="padding:56.25% 0 0 0;position:relative; margin-top:10px;">
+				<iframe allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" frameborder="0" src="https://nam12.safelinks.protection.outlook.com/?url=https%3A%2F%2Fplayer.vimeo.com%2Fvideo%2F740027824%3Fh%3Dda860d20a2%26amp%3Bbadge%3D0%26amp%3Bautopause%3D0%26amp%3Bplayer_id%3D0%26amp%3Bapp_id%3D58479&amp;data=05%7C01%7C%7Ce21865c95bd54149d28808dab7949902%7C31d7e2a5bdd8414e9e97bea998ebdfe1%7C0%7C0%7C638024146118499325%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=lgfJh%2FDatx5yVVnINEpPmiKz0CbwEuIx1CC7tyqC8cs%3D&amp;reserved=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Why WeTeach_CS?"></iframe></div>
+			<script src="https://nam12.safelinks.protection.outlook.com/?url=https%3A%2F%2Fplayer.vimeo.com%2Fapi%2Fplayer.js&amp;data=05%7C01%7C%7Ce21865c95bd54149d28808dab7949902%7C31d7e2a5bdd8414e9e97bea998ebdfe1%7C0%7C0%7C638024146118499325%7CUnknown%7CTWFpbGZsb3d8eyJWIjoiMC4wLjAwMDAiLCJQIjoiV2luMzIiLCJBTiI6Ik1haWwiLCJXVCI6Mn0%3D%7C3000%7C%7C%7C&amp;sdata=39am3FHtc%2FzSrz5DQznWvO%2BwBj%2FQo7tJPYTY6jk2z90%3D&amp;reserved=0"></script></figure>
+		<div class="col-sm-7  weteachcs-card__content">
+			<h3 style="margin-top: 10px;">
+				Why WeTeach_CS</h3>
+			<p>
+				Learn more about how WeTeach_CS can help your school or district build a strong and inclusive computer science program.</p>
+			<p>
+				<em><a href="/epic/weteachcs/about/goals-and-outcomes">Learn more<span class="sr-only"> about WeTeach_CS goals and outcomes</span></a></em></p>
+		</div>
+	</div>
+	<div class="row  weteachcs-card">
+		<figure class="col-sm-5  weteachcs-card__figure">
+			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media" style="margin-top: 10px;">
 				<iframe allowfullscreen="" class="embed-responsive-item" src="https://player.vimeo.com/video/183874056"></iframe></div>
 		</figure>
 		<div class="col-sm-7  weteachcs-card__content">
-			<h3>
+			<h3 style="margin-top: 10px;">
 				Goals and Outcomes</h3>
 			<p>
 				WeTeach_CS educates, empowers, and inspires K-12 CS teachers, administrators, professional development providers, and university instructors to realize the vision of <em>computer science for <strong>all</strong></em>.</p>
@@ -147,11 +161,11 @@ Style guide: components.weteachcs.card
 	</div>
 	<div class="row  weteachcs-card">
 		<figure class="col-sm-5  weteachcs-card__figure">
-			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media">
+			<div class="embed-responsive embed-responsive-16by9  weteachcs-card__media" style="margin-top: 10px;">
 				<iframe allowfullscreen="" class="embed-responsive-item" src="https://player.vimeo.com/video/254041542"></iframe></div>
 		</figure>
 		<div class="col-sm-7  weteachcs-card__content">
-			<h3>
+			<h3 style="margin-top: 10px;">
 				Certification and Professional Development</h3>
 			<p>
 				Our certification and professional development programs are helping to increase the number of CS teachers in Texas while improving the quality of CS classroom instruction.</p>
