--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--css.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs--css.html
@@ -95,6 +95,10 @@ Style guide: Components.WeTeachCS.Card
     background-color: #f1f1f1;
     font-size: 16px;
 }
+.weteachcs-card--highlight .row {
+    display: flex;
+    align-items: center;
+}
 /* FAQ: Remove default bottom margin of the last `p` within a
         `weteachcs-card--highlight`, so space around card content is equal. */
 .weteachcs-card--highlight *:last-child { margin-bottom: 0; }
