--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/test/tableau.html
@@ -1,56 +1,48 @@
 <section class="weteachcs-content">
     <h3>
-        Heading Lvl. 3</h3>
+        I Test Tableau Embed &amp; Dashboard</h3>
     <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel lacus est. Nunc tempor risus vel nulla semper, in auctor justo bibendum. Proin mattis condimentum tempus. Sed interdum ut ligula vel lacinia. Integer efficitur porta augue vitae semper. Nunc viverra a libero vel iaculis. Praesent bibendum enim enim, sed eleifend neque vestibulum eget. Sed sed varius diam. Mauris vitae auctor justo. Nunc id pulvinar tellus.</p>
-    <!-- Tableau Snippet: Start --><!-- TACC: For responsiveness, added class ` embed-responsive` --><!-- TACC: For consistency (with certification.html), removed attribute `style="position: relative"` -->
-    <div
-        class="tableauPlaceholder embed-responsive"
-        id="viz1666642874503"
-    >
-        <noscript
-        ><a href="#"
-            ><img
-            alt="Dashboard 1a "
-            src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;EP&#47;EPICDashboard&#47;Dashboard1a&#47;1_rss.png"
-            style="border: none" /></a></noscript
-        ><object class="tableauViz" style="display: none">
-            <!-- TACC: For responsiveness, prevent wide layouts inside iframe -->
+    <!-- Tableau Snippet: Start --><!-- TACC: For responsiveness, added class `embed-responsive` --><!-- TACC: For consistency (with certification.html), removed attribute `style="position: relative"` -->
+    <div class="tableauPlaceholder embed-responsive" id="viz1668011342313">
+        <noscript>
+            <a href="#">
+            <img alt="Dashboard 1a" src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;EP&#47;EPICDashboard&#47;Dashboard1a&#47;1_rss.png" style="border: none" />
+            </a>
+        </noscript>
+        <object class="tableauViz" style="display:none;">
             <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
             <param name="embed_code_version" value="3" />
             <param name="site_root" value="" />
-            <param name="name" value="EPICDashboard/Dashboard1a" />
+            <param name="name" value="EPICDashboard&#47;Dashboard1a" />
             <param name="tabs" value="no" />
             <param name="toolbar" value="yes" />
-            <param
-                name="static_image"
-                value="https://public.tableau.com/static/images/EP/EPICDashboard/Dashboard1a/1.png"
-            />
+            <param name="static_image" value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;EP&#47;EPICDashboard&#47;Dashboard1a&#47;1.png" />
             <param name="animate_transition" value="yes" />
-            <!-- TACC: For aesthetic, do not show image (which stretched) -->
-            <param name="display_static_image" value="no" />
+            <param name="display_static_image" value="yes" />
             <param name="display_spinner" value="yes" />
             <param name="display_overlay" value="yes" />
             <param name="display_count" value="yes" />
             <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
         </object>
-    </div>
-    <script type="text/javascript">
-    var divElement = document.getElementById("viz1666642874503");
-    var vizElement = divElement.getElementsByTagName("object")[0];
-    /* TACC: To fit in compressed EPIC page, removed most width manipulation */
-    if (divElement.offsetWidth > 800) {
-        // vizElement.style.width = "1366px";
-        vizElement.style.height = "795px";
-    // } else if (divElement.offsetWidth > 500) {
-    //     vizElement.style.width = "1366px";
-    //     vizElement.style.height = "795px";
-    } else {
-        // vizElement.style.width = "100%";
-        vizElement.style.height = "1877px";
-    }
-    var scriptElement = document.createElement("script");
-    scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-    vizElement.parentNode.insertBefore(scriptElement, vizElement);
-    </script><!-- Tableau Snippet: End -->
+      </div>
+      <script type="text/javascript">
+        var divElement = document.getElementById("viz1668011342313");
+        var vizElement = divElement.getElementsByTagName("object")[0];
+        if (divElement.offsetWidth > 800) {
+          vizElement.style.width = "1140px";
+          vizElement.style.height = "795px";
+        } else if (divElement.offsetWidth > 500) {
+          vizElement.style.width = "1140px";
+          vizElement.style.height = "795px";
+        } else {
+          vizElement.style.width = "100%";
+          vizElement.style.height = "1877px";
+        }
+        /* TACC: 100% width prevents overflow */vizElement.style.width = "100%";
+        var scriptElement = document.createElement("script");
+        scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
+        vizElement.parentNode.insertBefore(scriptElement, vizElement);
+      </script><!-- Tableau Snippet: End -->
 </section>
