--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
@@ -64,4 +64,50 @@
             </div>
 		</div>
 	</div>
+	<h3>
+		Contact</h3>
+	<style id="o-gallery-styles" type="text/css">
+/*
+    Gallery (Object)
+
+    A gallery of apps to launch, images to view, etc.
+
+    .o-gallery--shrink-wrap - Shrink items to minimum size
+
+    Markup:
+    <ul class="o-gallery">
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Grapes</li>
+    </ul>
+    */
+    /* WARNING: Duplicated in other pages */
+    /* WARNING: Over-engineered in other pages */
+    .o-gallery {
+        --gap: 15px; /* Bootstrap spacing */
+
+        display: grid;
+        gap: var(--gap);
+    }
+    .o-gallery--shrink-wrap {
+        --item-min-width: auto;
+    }
+    /* On very narrow viewport, no columns */
+    /* WARNING: Custom standard breakpoint: 359px / 360px */
+    /* SEE: https://ricostacruz.com/til/css-media-query-breakpoints */
+    @media only screen and (max-width: 359px) {
+        .o-gallery--shrink-wrap { grid-template-columns: repeat(1, minmax(var(--item-min-width), 1fr)); }
+    }
+    /* On narrow viewport, less columns */
+    @media only screen and (min-width: 360px) and (max-width: 767px) {
+        .o-gallery--shrink-wrap { grid-template-columns: repeat(2, minmax(var(--item-min-width), 2fr)); }
+    }
+    /* On wide viewport, more columns */
+    @media only screen and (min-width: 768px) {
+        .o-gallery--shrink-wrap { grid-template-columns: repeat(3, minmax(var(--item-min-width), 1fr)); }
+    }	</style>
+	<div class="o-gallery o-gallery--shrink-wrap" style="--min-item-width: 225px">
+		<figure class="weteachcs-card weteachcs-card--highlight">
+			<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/amy-carrell.jpg/" /> <figcaption class="weteachcs-card__content"> <a href="/about/directory/amy-carrell">Amy Carrell</a> serves as Director of Outreach for EPIC and can assist you with questions about WeTeach_CS professional development services.</figcaption></figure>
+	</div>
 </section>
