feat: rt-23945 epic main page group photo swap

--- a/web-content/root/education-archived/epic.html
+++ b/web-content/root/education-archived/epic.html
@@ -34,7 +34,7 @@
 	<p>
 		EPIC's Technology Services division designs and supports a variety of custom web applications to assist in operational processes needed to run an effective research, service, governmental, or non-profit organization. We work with partners and clients to create secure web forms, payment gateways, registration systems, and web-based compliance reporting systems. Our applications are secured using enterprise-level security standards and updated regularly. Below are examples of projects our team currently services.</p>
 	<p>
-		<img class="img-responsive" src="/documents/1084364/1761473/epic-team-1000.jpg/" style="border:none; margin:20px 0px;" /></p>
+		<img class="img-responsive" src="/documents/1084364/1761473/epic-group-cutout-2022-q4.jpg" style="border:none; margin:20px 0px;" /></p>
 	<h3>
 		Contact</h3>
 	<style id="o-gallery-styles" type="text/css">
