--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
@@ -3,69 +3,80 @@
 		About WeTeach_Cyber</h3>
 	<div class="weteachcs-card weteachcs-card--highlight">
 		<div class="row">
-			<div class="col-sm-5 weteachcs-card__figure">
-				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber-logo.png" style="border: none" /></div>
-			<div class="col-sm-7  weteachcs-card__content">
+			<div class="col-sm-3 weteachcs-card__figure">
+				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber-logo--no-text.png" style="border: none" /></div>
+			<div class="col-sm-9  weteachcs-card__content">
 				<p>
-                    WeTeach_Cyber educates, empowers, and inspires K-12 cybersecurity teachers, administrators, counselors, and industry professionals to build a robust and diverse cybersecurity workforce pipeline. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin’s Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_Cyber project, which serves districts, schools, educators, and students across Texas. WeTeach_Cyber is dedicated to broadening participation in cybersecurity for every student regardless of race, gender, income, or location, and leverages TACC's internationally recognized computing expertise and network infrastructure to guide strategic improvement in cybersecurity education at a state and national level.</p>
-            </div>
+					WeTeach_Cyber educates, empowers, and inspires K-12 cybersecurity teachers, administrators, counselors, and industry professionals to build a robust and diverse cybersecurity workforce pipeline. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin’s Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_Cyber project, which serves districts, schools, educators, and students across Texas. WeTeach_Cyber is dedicated to broadening participation in cybersecurity for every student regardless of race, gender, income, or location, and leverages TACC's internationally recognized computing expertise and network infrastructure to guide strategic improvement in cybersecurity education at a state and national level.</p>
+			</div>
 		</div>
 	</div>
 	<h3>
 		Current Projects</h3>
-    <h4>
-        EPIC Cyber Range</h4>
-    <p>
-        Lead: <a href="/about/directory/carol-fletcher">Carol Fletcher</a>, <a href="/about/directory/nikki-hendricks">Nikki Hendricks</a> &amp; <a href="/about/directory/alexander-barnes">Alexander Barnes</a></p>
-    <div class="weteachcs-card">
-        <div class="row">
-            <div class="col-sm-5 weteachcs-card__figure">
-                <img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/EPIC_Cyber_Range-logo.png" style="border: none" /></div>
-            <div class="col-sm-7  weteachcs-card__content">
+	<h4>
+		WeTeach_Cyber Newsletter</h4>
+	<div class="weteachcs-card">
+		<div class="row">
+			<div class="col-sm-5 weteachcs-card__figure" style="height: 90px; overflow: hidden;">
+				<img class="img-responsive weteachcs-card__media" alt="WeTeach_Cyber Newsletter Cover" src="/documents/1084364/1750990/weteach_cyber_newsletter_thumbnail.png" style="border: none" /></div>
+			<div class="col-sm-7  weteachcs-card__content">
+				<p>
+					Anyone is welcome to read and subscribe to our WeTeach_Cyber newsletter, which offers up-to-date state of Cybersecurity education in Texas.</p>
+				<p>
+					<a href="https://utexas.app.box.com/s/soq31nnajqh4v4mztwwljm28qrav490i" target="_blank">Download the WeTeach_Cyber newsletter.</a></p>
+			</div>
+		</div>
+	</div>
+	<h4>
+		EPIC Cyber Range</h4>
+	<div class="weteachcs-card">
+		<div class="row">
+			<div class="col-sm-5 weteachcs-card__figure">
+				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/EPIC_Cyber_Range-logo.png" style="border: none" /></div>
+			<div class="col-sm-7  weteachcs-card__content">
+				<p>
+					The EPIC Cyber Range (ECR) was developed to support classroom teachers in their efforts to provide a secure environment for students to learn about Linux and Windows operating systems and cybersecurity without the expense of specialized software and system infrastructure costs. Applications for schools to participate in the ECR open each spring.<!-- Subscribe to the WeTeach_Cyber newsletter to be notified when applications open.--></p>
                 <p>
-                    The EPIC Cyber Range (ECR) was developed to support classroom teachers in their efforts to provide a secure environment for students to learn about Linux and Windows operating systems and cybersecurity without the expense of specialized software and system infrastructure costs. Applications for schools to participate in the ECR open each spring. Subscribe to the WeTeach_Cyber newsletter to be notified when applications open</p>
-                <p>
-                    <a href="https://forms.gle/ojsXNQ5ncPWFjrRG6">Apply for the EPIC Cyber Range.</a></p>
-            </div>
-        </div>
-    </div>
-    <h4>
-        WeTeach_Cyber Collaborative</h4>
-	<p>
-		Lead: <a href="/about/directory/nikki-hendricks">Nikki Hendricks</a>
+                    <a href="https://utexas.app.box.com/s/soq31nnajqh4v4mztwwljm28qrav490i" target="_blank" title="WeTeach_Cyber Newsletter">Subscribe to the WeTeach_Cyber newsletter</a> to be notified when applications open.</p>
+				<!-- The EPIC Cyber Range form is "too out of date and we do not know when we will open up for more." so they offer newsletter instead. — EPIC --><!--<p><a href="https://forms.gle/ojsXNQ5ncPWFjrRG6">Apply for the EPIC Cyber Range.</a></p>-->
+			</div>
+		</div>
+	</div>
+	<h4>
+		WeTeach_Cyber Collaborative</h4>
 	<div class="weteachcs-card">
 		<div class="row">
 			<div class="col-sm-5 weteachcs-card__figure">
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber_Collab-logo.jpeg" style="border: none" /></div>
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
-                    The WeTeach_Cyber Collaborative is a professional development initiative to build and enhance cybersecurity education in our nation’s schools. One of the most important ways to increase the availability of cybersecurity courses in our high schools is to invest in the education of our nation’s cybersecurity teachers. The goal of the WeTeach_Cyber Collaborative is to increase the number of Texas high school CTE teachers who can effectively prepare students for cybersecurity post-secondary opportunities and careers. This project is part of <a href="https://www.tacc.utexas.edu/epic/weteachcs/about/projects">Lone Star STEM</a>, a grant funded by the U.S. Department of Education in partnership with Jobs for the Future. Subscribe to the WeTeach_Cyber newsletter to be notified about opportunities to apply for future cohorts of the WeTeach_Cyber collaborative.</p>
-                <p>
-                    <a href="https://utakeit.tacc.utexas.edu/resources/WTCS-Cyber-Collab-2022/">Learn more about the WeTeach_Cyber collaborative.</a></p>
-            </div>
+					The WeTeach_Cyber Collaborative is a professional development initiative to build and enhance cybersecurity education in our nation’s schools. One of the most important ways to increase the availability of cybersecurity courses in our high schools is to invest in the education of our nation’s cybersecurity teachers. The goal of the WeTeach_Cyber Collaborative is to increase the number of Texas high school CTE teachers who can effectively prepare students for cybersecurity post-secondary opportunities and careers. This project is part of <a href="https://www.tacc.utexas.edu/epic/weteachcs/about/projects">Lone Star STEM</a>, a grant funded by the U.S. Department of Education in partnership with Jobs for the Future. Subscribe to the WeTeach_Cyber newsletter to be notified about opportunities to apply for future cohorts of the WeTeach_Cyber collaborative.</p>
+				<p>
+					<a href="https://utakeit.tacc.utexas.edu/resources/WTCS-Cyber-Collab-2022/">Learn more about the WeTeach_Cyber collaborative.</a></p>
+			</div>
 		</div>
 	</div>
-    <h4>
-        CyberStart Texas</h4>
-    <p>
-        Lead: <a href="/about/directory/carol-fletcher">Carol Fletcher</a>, <a href="/about/directory/nikki-hendricks">Nikki Hendricks</a> &amp; Sara Jefferson, DIR</p>
+	<h4>
+		CyberStart Texas</h4>
 	<div class="weteachcs-card">
 		<div class="row">
 			<div class="col-sm-5 weteachcs-card__figure">
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/CyberStartTX-logo.png" style="border: none" /></div>
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
-                    CyberStart America is a free, national program that gives students in 9th-12th grade access to the world-renowned CyberStart game. CyberStart is a gamified platform that makes learning cyber security fun through over 200 exciting challenges and puzzles. The platform is perfect for all abilities, as challenges start easy and become more advanced as students progress. In partnership with the National Cyber Scholarship Foundation, the SANS Institute developed a way to identify, train, and certify high school students in one year — without a cyber teacher — through CyberStart America. The Texas CSA Task Force partners with institutes for higher education like the Texas Advanced Computing Center, cyber industry, private sector leaders, and public-school systems in the state. The main goal is to promote CyberStart America through materials and cash prize incentives to high schools, high school students, and districts. 
-                </p>
-                <p>
-                    <a href="https://www.cyberstartamerica.org/">Register now for CyberStart America.</a></p>
-                <p>
-                    To support Texas students and schools participating in the CyberStart America program, <a href="https://drive.google.com/file/d/1o-3EoBYj9eVpP2jNizP3zCDEWvr06Zdb/view?usp=share_link">click here</a>.</p>
-            </div>
+					CyberStart America is a free, national program that gives students in 9th-12th grade access to the world-renowned CyberStart game. CyberStart is a gamified platform that makes learning cyber security fun through over 200 exciting challenges and puzzles. The platform is perfect for all abilities, as challenges start easy and become more advanced as students progress. In partnership with the National Cyber Scholarship Foundation, the SANS Institute developed a way to identify, train, and certify high school students in one year — without a cyber teacher — through CyberStart America. The Texas CSA Task Force partners with institutes for higher education like the Texas Advanced Computing Center, cyber industry, private sector leaders, and public-school systems in the state. The main goal is to promote CyberStart America through materials and cash prize incentives to high schools, high school students, and districts.</p>
+				<p>
+					<a href="https://www.cyberstartamerica.org/">Register now for CyberStart America.</a></p>
+				<p>
+					To support Texas students and schools participating in the CyberStart America program, <a href="https://drive.google.com/file/d/1o-3EoBYj9eVpP2jNizP3zCDEWvr06Zdb/view?usp=share_link">click here</a>.</p>
+			</div>
 		</div>
 	</div>
 	<h3>
 		Contact</h3>
+	<h4>
+		Project Lead</h4>
+	<!--<p>WeTeach_Cyber is lead by EPIC Cybersecurity Education Specialist <a href="/about/directory/nikki-hendricks">Nikki Hendricks</a>.</p>-->
 	<style id="o-gallery-styles" type="text/css">
 /*
     Gallery (Object)
@@ -111,6 +122,8 @@
     }	</style>
 	<div class="o-gallery o-gallery--shrink-wrap" style="--min-item-width: 225px">
 		<figure class="weteachcs-card weteachcs-card--highlight">
-			<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/nikki-hendricks.jpg" /> <figcaption class="weteachcs-card__content"> <strong><a href="/about/directory/nikki-hendricks">Nikki Hendricks</a></strong><br />Cybersecurity Education Specialist<br /><a hhref="mailto:nhendricks@tacc.utexas.edu">nhendricks@tacc.utexas.edu</a></figcaption></figure>
+			<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1085221/nikki-hendricks.jpg" /> <figcaption class="weteachcs-card__content"> <strong><a href="/about/directory/nikki-hendricks">Nikki Hendricks</a></strong><br />
+			Cybersecurity Education Specialist<br />
+			<a hhref="mailto:nhendricks@tacc.utexas.edu">nhendricks@tacc.utexas.edu</a></figcaption></figure>
 	</div>
 </section>
