feat: rt-23755 weteach_cyber, blurb on epic page

--- a/web-content/root/education-archived/epic.html
+++ b/web-content/root/education-archived/epic.html
@@ -16,6 +16,10 @@
 	<p>
 		The WeTeach_CS project trains K-12 educators to improve high quality CS experiences for a broad and diverse range of students. WeTeach_CS is increasing the number of CS certified high school teachers, increasing the number of high schools offering CS courses, increasing the number and diversity of students enrolled in CS courses, and expanding access to computational thinking, coding and programming experiences for all students in K-8. WeTeach_CS educates, empowers and inspires K-12 teachers to realize the vision of CSforAll.</p>
 	<h4>
+		<a href="/epic/weteachcyber">WeTeach_Cyber</a></h4>
+	<p>
+		The WeTeach_Cyber project engages K-12 educators, institutions of higher education, and industry professionals to improve high quality cybersecurity experiences for a broad and diverse range of students. WeTeach_Cyber is increasing the number of high school career and technical education (CTE) teachers who can effectively prepare students for cybersecurity post-secondary opportunities and careers, increasing the number of high schools offering cybersecurity courses, and increasing the number and diversity of students enrolled in cybersecurity courses.</p>
+	<h4>
 		<a href="/epic/research">Research</a></h4>
 	<p>
 		EPIC supports several research projects related to broadening participation in CS education.</p>
