feat: rt-23755 weteach_cyber, &#8217; and spaces

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
@@ -7,7 +7,7 @@
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber-logo--no-text.png" style="border: none" /></div>
 			<div class="col-sm-9  weteachcs-card__content">
 				<p>
-					WeTeach_Cyber educates, empowers, and inspires K-12 cybersecurity teachers, administrators, counselors, and industry professionals to build a robust and diverse cybersecurity workforce pipeline. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin’s Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_Cyber project, which serves districts, schools, educators, and students across Texas. WeTeach_Cyber is dedicated to broadening participation in cybersecurity for every student regardless of race, gender, income, or location, and leverages TACC's internationally recognized computing expertise and network infrastructure to guide strategic improvement in cybersecurity education at a state and national level.</p>
+					WeTeach_Cyber educates, empowers, and inspires K-12 cybersecurity teachers, administrators, counselors, and industry professionals to build a robust and diverse cybersecurity workforce pipeline. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin&#8217;s Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_Cyber project, which serves districts, schools, educators, and students across Texas. WeTeach_Cyber is dedicated to broadening participation in cybersecurity for every student regardless of race, gender, income, or location, and leverages TACC&#8217;s internationally recognized computing expertise and network infrastructure to guide strategic improvement in cybersecurity education at a state and national level.</p>
 			</div>
 		</div>
 	</div>
@@ -18,7 +18,7 @@
 	<div class="weteachcs-card">
 		<div class="row">
 			<div class="col-sm-5 weteachcs-card__figure" style="height: 90px; overflow: hidden;">
-				<img class="img-responsive weteachcs-card__media" alt="WeTeach_Cyber Newsletter Cover" src="/documents/1084364/1750990/weteach_cyber_newsletter_thumbnail.png" style="border: none" /></div>
+				<img alt="WeTeach_Cyber Newsletter Cover" class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cyber_newsletter_thumbnail.png" style="border: none" /></div>
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
 					Anyone is welcome to read and subscribe to our WeTeach_Cyber newsletter, which offers up-to-date state of Cybersecurity education in Texas.</p>
@@ -36,10 +36,9 @@
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
 					The EPIC Cyber Range (ECR) was developed to support classroom teachers in their efforts to provide a secure environment for students to learn about Linux and Windows operating systems and cybersecurity without the expense of specialized software and system infrastructure costs. Applications for schools to participate in the ECR open each spring.<!-- Subscribe to the WeTeach_Cyber newsletter to be notified when applications open.--></p>
-                <p>
-                    <a href="https://utexas.app.box.com/s/soq31nnajqh4v4mztwwljm28qrav490i" target="_blank" title="WeTeach_Cyber Newsletter">Subscribe to the WeTeach_Cyber newsletter</a> to be notified when applications open.</p>
-				<!-- The EPIC Cyber Range form is "too out of date and we do not know when we will open up for more." so they offer newsletter instead. — EPIC --><!--<p><a href="https://forms.gle/ojsXNQ5ncPWFjrRG6">Apply for the EPIC Cyber Range.</a></p>-->
-			</div>
+				<p>
+					<a href="https://utexas.app.box.com/s/soq31nnajqh4v4mztwwljm28qrav490i" target="_blank" title="WeTeach_Cyber Newsletter">Subscribe to the WeTeach_Cyber newsletter</a> to be notified when applications open.</p>
+				<!-- The EPIC Cyber Range form is "too out of date and we do not know when we will open up for more." so they offer newsletter instead. — EPIC --><!--<p><a href="https://forms.gle/ojsXNQ5ncPWFjrRG6">Apply for the EPIC Cyber Range.</a></p>--></div>
 		</div>
 	</div>
 	<h4>
@@ -50,7 +49,7 @@
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber_Collab-logo.jpeg" style="border: none" /></div>
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
-					The WeTeach_Cyber Collaborative is a professional development initiative to build and enhance cybersecurity education in our nation’s schools. One of the most important ways to increase the availability of cybersecurity courses in our high schools is to invest in the education of our nation’s cybersecurity teachers. The goal of the WeTeach_Cyber Collaborative is to increase the number of Texas high school CTE teachers who can effectively prepare students for cybersecurity post-secondary opportunities and careers. This project is part of <a href="https://www.tacc.utexas.edu/epic/weteachcs/about/projects">Lone Star STEM</a>, a grant funded by the U.S. Department of Education in partnership with Jobs for the Future. Subscribe to the WeTeach_Cyber newsletter to be notified about opportunities to apply for future cohorts of the WeTeach_Cyber collaborative.</p>
+					The WeTeach_Cyber Collaborative is a professional development initiative to build and enhance cybersecurity education in our nation&#8217;s schools. One of the most important ways to increase the availability of cybersecurity courses in our high schools is to invest in the education of our nation&#8217;s cybersecurity teachers. The goal of the WeTeach_Cyber Collaborative is to increase the number of Texas high school CTE teachers who can effectively prepare students for cybersecurity post-secondary opportunities and careers. This project is part of <a href="https://www.tacc.utexas.edu/epic/weteachcs/about/projects">Lone Star STEM</a>, a grant funded by the U.S. Department of Education in partnership with Jobs for the Future. Subscribe to the WeTeach_Cyber newsletter to be notified about opportunities to apply for future cohorts of the WeTeach_Cyber collaborative.</p>
 				<p>
 					<a href="https://utakeit.tacc.utexas.edu/resources/WTCS-Cyber-Collab-2022/">Learn more about the WeTeach_Cyber collaborative.</a></p>
 			</div>
