feat: rt-23755 weteach_cyber, final changes

--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cyber.html
@@ -7,7 +7,7 @@
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/WeTeach_Cyber-logo--no-text.png" style="border: none" /></div>
 			<div class="col-sm-9  weteachcs-card__content">
 				<p>
-					WeTeach_Cyber educates, empowers, and inspires K-12 cybersecurity teachers, administrators, counselors, and industry professionals to build a robust and diverse cybersecurity workforce pipeline. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin&#8217;s Texas Advanced Computing Center (TACC) serves as the backbone organization for the WeTeach_Cyber project, which serves districts, schools, educators, and students across Texas. WeTeach_Cyber is dedicated to broadening participation in cybersecurity for every student regardless of race, gender, income, or location, and leverages TACC&#8217;s internationally recognized computing expertise and network infrastructure to guide strategic improvement in cybersecurity education at a state and national level.</p>
+					WeTeach_Cyber educates, supports, and promotes cybersecurity education in the K-12 academic arena. Focused on expanding the cybersecurity workforce pipeline, WeTeach_Cyber provides high-quality, engaging training for K-12 educators, administrators, and counselors. WeTeach_Cyber fulfills this mission by coordinating with school districts, industry partners, and cybersecurity organizations to provide impactful content resources, presentations, workshops, and educator collaboratives. The Expanding Pathways in Computing (EPIC) group at The University of Texas at Austin&#8217;s Texas Advanced Computing Center (TACC) serves as the foundational organization for WeTeach_Cyber, a project dedicated to providing cybersecurity education for every student regardless of race, gender, income, or location.</p>
 			</div>
 		</div>
 	</div>
@@ -35,9 +35,11 @@
 				<img class="img-responsive  weteachcs-card__media" src="/documents/1084364/1750990/EPIC_Cyber_Range-logo.png" style="border: none" /></div>
 			<div class="col-sm-7  weteachcs-card__content">
 				<p>
-					The EPIC Cyber Range (ECR) was developed to support classroom teachers in their efforts to provide a secure environment for students to learn about Linux and Windows operating systems and cybersecurity without the expense of specialized software and system infrastructure costs. Applications for schools to participate in the ECR open each spring.<!-- Subscribe to the WeTeach_Cyber newsletter to be notified when applications open.--></p>
+					The EPIC Cyber Range (ECR) was developed to support classroom teachers in their efforts to provide a secure environment for students to learn about Linux and Windows operating systems and cybersecurity without the expense of specialized software and system infrastructure costs. <strong>TACC&#8217;s internationally recognized computing expertise and network infrastructure provides the backbone for the EPIC Cyber Range.</strong></p>
 				<p>
-					<a href="https://utexas.app.box.com/s/soq31nnajqh4v4mztwwljm28qrav490i" target="_blank" title="WeTeach_Cyber Newsletter">Subscribe to the WeTeach_Cyber newsletter</a> to be notified when applications open.</p>
+					Applications for schools to participate in the ECR open each spring.</p>
+				<p>
+					<a href="https://forms.office.com/Pages/ResponsePage.aspx?id=peLXMdi9TkGel76pmOvf4bi-H45H359ItRmzdYbZ0B9UN1FCUDZKUFdBN1BMRzA2SEI2VTZWQVQ2VC4u" target="_blank" title="WeTeach_Cyber Newsletter">Subscribe to the WeTeach_Cyber newsletter</a> to be notified when applications open.</p>
 				<!-- The EPIC Cyber Range form is "too out of date and we do not know when we will open up for more." so they offer newsletter instead. — EPIC --><!--<p><a href="https://forms.gle/ojsXNQ5ncPWFjrRG6">Apply for the EPIC Cyber Range.</a></p>--></div>
 		</div>
 	</div>
