chore: staff dir, update form cms

--- a/web-content/root/about/directory--full-time.html
+++ b/web-content/root/about/directory--full-time.html
@@ -1,4 +1,3 @@
-<hr class="grayline" />
 <h3>
 	Full Time Staff</h3>
 <center>
@@ -605,14 +604,6 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/brajesh-gupt">Gupt, Brajesh</a></td>
-			<td>
-				<a href="mailto:bgupt@tacc.utexas.edu">bgupt@tacc.utexas.edu</a></td>
-			<td>
-				Future Technologies</td>
-		</tr>
-		<tr>
-			<td>
 				<a href="/web/website/about/directory/amit-gupta">Gupta, Amit</a></td>
 			<td>
 				<a href="mailto:agupta@tacc.utexas.edu">agupta@tacc.utexas.edu</a></td>
@@ -773,11 +764,19 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="/web/website/about/directory/lars-koesterke" t3url="257">Koesterke, Lars</a></td>
+				<a href="/web/website/about/directory/lars-koesterke">Koesterke, Lars</a></td>
 			<td>
 				<a href="mailto:lars@tacc.utexas.edu">lars@tacc.utexas.edu</a></td>
 			<td>
 				HPC Performance &amp; Architectures</td>
+		</tr>
+<tr>
+			<td>
+				<a href="/web/website/about/directory/vladislav-krendelev"> Krendelev, Vladislav </a></td>
+			<td>
+				<a href="mailto:vkrendelev@tacc.utexas.edu">vkrendelev@tacc.utexas.edu</a></td>
+			<td>
+				Data Management &amp; Collections</td>
 		</tr>
 		<tr>
 			<td>
@@ -969,7 +968,7 @@
 			<td>
 				<a href="mailto:pnav@tacc.utexas.edu">pnav@tacc.utexas.edu</a></td>
 			<td>
-				Scalable Visualization Technologies</td>
+				Strategic Technologies</td>
 		</tr>
 		<tr>
 			<td>
@@ -1210,6 +1209,14 @@
 				<a href="mailto:asolis@tacc.utexas.edu">asolis@tacc.utexas.edu</a></td>
 			<td>
 				Scalable Visualization Technologies</td>
+		</tr>
+<tr>
+			<td>
+				<a href="/web/website/about/directory/douglas-southworth">Southworth, Douglas</a></td>
+			<td>
+				<a href="mailto:dsouthworth@tacc.utexas.edu">dsouthworth@tacc.utexas.edu</a></td>
+			<td>
+				Networking Partnerships</td>
 		</tr>
 		<tr>
 			<td>
