--- a/web-content/root/education/k-12-outreach/teachers/epic/research/cs-regional-data--intro.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/research/cs-regional-data--intro.html
@@ -10,4 +10,13 @@
 			</div>
 		</div>
 	</div>
+	<h4>
+		CS Data Dashboard</h4>
+	<p>
+		Our latest and historical data is now available on our <a href="/epic/research/dashboard" target="_blank">CS Data Dashboard</a>.</p>
+    <hr />
+	<h4>
+		Archive</h4>
+	<p>
+		Our latest and historical data is now available on our <a href="/epic/research/dashboard" target="_blank">CS Data Dashboard</a>.</p>
 </section>
