fix: rt-24803, cs-regional-data archive layout

--- a/web-content/root/education/k-12-outreach/teachers/epic/research/cs-regional-data--intro.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/research/cs-regional-data--intro.html
@@ -7,14 +7,14 @@
 			<div class="col-sm-12">
 				<p>
 					Each year, we analyze and report data on computer science education in Texas to monitor progress in K-12 computing education in the state, especially in terms of students' equitable access to and participation in computer science courses.</p>
+				<p>
+					<strong><a href="/epic/research/dashboard" target="_blank">CS Data Dashboard</a></strong></p>
 			</div>
 		</div>
 	</div>
-	<h4>
-		CS Data Dashboard</h4>
-	<p>
-		Our latest and historical data is now available on our <a href="/epic/research/dashboard" target="_blank">CS Data Dashboard</a>.</p>
-    <hr />
+	<br />
+	<hr />
+	<br />
 	<h4>
 		Archive</h4>
 </section>
