fix: rt-24803, cs data dashboard citation color

--- a/web-content/root/education/k-12-outreach/teachers/epic/research/dashboard.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/research/dashboard.html
@@ -20,7 +20,7 @@
     scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
     vizElement.parentNode.insertBefore(scriptElement, vizElement);
   </script><!-- Tableau Snippet: End -->
-	<p>
-		<br />
+	<br />
+	<p style="opacity: 0.5;">
 		Suggested citation: Warner, J. R., Bibriescas, N., Jacobson, M., McCann, C. (2022). Texas CS Education Data Dashboard. <a href="https://tacc.utexas.edu/epic/research/dashboard">https://tacc.utexas.edu/epic/research/dashboard</a></p>
 </section>
