--- a/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/certification.html
+++ b/web-content/root/education/k-12-outreach/teachers/epic/weteach_cs/certification.html
@@ -89,59 +89,51 @@
 		Currently Certified Teachers</h5>
 	<!-- Tableau Snippet: Start --><!-- SEE: https://help.tableau.com/current/pro/desktop/en-us/embed_list.htm -->
 	<!-- TACC: For responsiveness, added class ` embed-responsive` -->
-	<div
-	class="tableauPlaceholder embed-responsive"
-	id="viz1615245374896"
-	>
-		<noscript
-			><a href="#"
-			><img
-				alt=" "
-				src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1&#47;1_rss.png"
-				style="border: none" /></a></noscript
-		><object class="tableauViz" width="100%" height="100%" style="display: none">
-			<!-- TACC: For responsiveness, prevent wide layouts inside iframe -->
-			<param name="device" value="phone"/>
+	<div class="tableauPlaceholder embed-responsive" id="viz1671641583810" style="position: relative">
+		<noscript><a href="#"><img alt="Dashboard 1 "
+					src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1&#47;1_rss.png"
+					style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
 			<param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
 			<param name="embed_code_version" value="3" />
 			<param name="site_root" value="" />
-			<param
-				name="name"
-				value="WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1"
-			/>
+			<param name="name" value="WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1" />
 			<param name="tabs" value="no" />
 			<param name="toolbar" value="yes" />
-			<param
-				name="static_image"
-				value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1&#47;1.png"
-			/>
+			<param name="static_image"
+				value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;We&#47;WeTeach_CSCertificationIncentiveProgram&#47;Dashboard1&#47;1.png" />
 			<param name="animate_transition" value="yes" />
-			<!-- TACC: For aesthetic, do not show image (which stretched) -->
-			<param name="display_static_image" value="no" />
+			<param name="display_static_image" value="yes" />
 			<param name="display_spinner" value="yes" />
 			<param name="display_overlay" value="yes" />
 			<param name="display_count" value="yes" />
-			<param name="language" value="en" />
+			<param name="language" value="en-US" />
 			<param name="filter" value="publish=yes" />
 		</object>
 	</div>
 	<script type="text/javascript">
-	var divElement = document.getElementById("viz1615245374896");
-	var vizElement = divElement.getElementsByTagName("object")[0];
-	/* TACC: For responsiveness, removed width manipulation */
-	if (divElement.offsetWidth > 800) {
-		// vizElement.style.width = "1300px";
-		vizElement.style.height = "927px";
-	// } else if (divElement.offsetWidth > 500) {
-	// 	vizElement.style.width = "1300px";
-	// 	vizElement.style.height = "927px";
-	} else {
-		// vizElement.style.width = "100%";
-		vizElement.style.height = "727px";
-	}
-	var scriptElement = document.createElement("script");
-	scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-	vizElement.parentNode.insertBefore(scriptElement, vizElement);
+		var divElement = document.getElementById("viz1671641583810");
+		var vizElement = divElement.getElementsByTagName("object")[0];
+		/* TACC: For responsiveness, removed width manipulation */
+		/* TACC: For responsiveness, changed height for dashboard scrollbar */
+		if (divElement.offsetWidth > 800) {
+			// vizElement.style.width = "750px";
+			// vizElement.style.height = "647px";
+			vizElement.style.height = "662px";
+		} else if (divElement.offsetWidth > 500) {
+			// vizElement.style.width = "750px";
+			// vizElement.style.height = "647px";
+			vizElement.style.height = "662px";
+		} else {
+			// vizElement.style.width = "100%";
+			vizElement.style.height = "727px";
+		}
+		/* TACC: For responsiveness, change width based on window width */
+		if (window.innerWidth >= 992 && window.innerWidth < 1200) {
+			vizElement.style.width = "750px";
+		}
+		var scriptElement = document.createElement("script");
+		scriptElement.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
+		vizElement.parentNode.insertBefore(scriptElement, vizElement);
 	</script><!-- Tableau Snippet: End -->
 	<h4>
 		Start Teaching!</h4>
