chore: rt-24099 update k-12--students from cms

--- a/web-content/root/education/k-12--students.html
+++ b/web-content/root/education/k-12--students.html
@@ -1,43 +1,63 @@
 <!--<style type="text/css">/* Markup below relies on 2021 "Education - Styles" */</style>-->
-<h2>
-	for Students</h2>
 <h3>
-	High School Summer Camps</h3>
-<ul class="edu-list--major">
-	<li>
-		<h4>
-			<a href="https://utexas.qualtrics.com/jfe/form/SV_8CbPYK9AUcdLxBz" target="_blank">Robotics</a></h4>
-		<p>
-			Introduction to programming, robotics, and electronics</p>
-	</li>
-	<li>
-		<h4>
-			<a href="/education/stem-programs/code-at-tacc/connected">Connected</a></h4>
-		<p>
-			Using technology to solve problems important to them and their community</p>
-	</li>
-	<li>
-		<h4>
-			<a href="/education/stem-programs/code-at-tacc/cybersecurity">Gencyber | Cybersecurity</a></h4>
+	For Students</h3>
+<p>
+	<img class="img-responsive" src="/documents/1084364/2107573/for-students.jpg/" /></p>
+<h4>
+	High School Summer Camps</h4>
+<div class="row">
+	<div class="col-sm-4">
+		<div style="min-height:200px; background-color: #E4E4E4; padding: 10px; margin: 10px 0px; border: solid 1px #cccccc;">
+			<h5>
+				<a href="https://utexas.qualtrics.com/jfe/form/SV_8CbPYK9AUcdLxBz" target="_blank">Robotics</a></h5>
+			<p>
+				Introduction to programming, robotics, and electronics.</p>
+		</div>
+	</div>
+	<div class="col-sm-4">
+		<div style="min-height:200px; background-color: #E4E4E4; padding: 10px; margin: 10px 0px; border: solid 1px #cccccc;">
+			<h5>
+				<a href="/education/stem-programs/code-at-tacc/connected" target="_blank">Connected</a></h5>
+			<p>
+				Using technology to solve problems important to them and their community.</p>
+		</div>
+	</div>
+	<!-- Hidden Page --><!--<li>
+		<h5>
+			<a href="/education/stem-programs/code-at-tacc/cybersecurity">Gencyber | Cybersecurity</a></h5>
 		<p>
 			Cybersecurity careers and online safety</p>
+	</li>-->
+	<div class="col-sm-4">
+		<div style="min-height:200px; background-color: #E4E4E4; padding: 10px; margin: 10px 0px; border: solid 1px #cccccc;">
+			<h5>
+				<a href="/education/stem-programs/code-at-tacc/cybersecurity" target="_blank">Cybersecurity</a></h5>
+			<p>
+				Cybersecurity careers and online safety.</p>
+		</div>
+	</div>
+</div>
+<!--Pending Page Content--><!--
+<li>
+		<h5>
+			<a href="/education/k-12-outreach/students/alumni">Alumni</a></h5>
+		<p>
+			(Pending page content to describe)</p>
 	</li>
-	<!--<li>
-		<h4>
-			<a href="/education/stem-programs/code-at-tacc/cybersecurity-comptia-and-certification-virtual-program">Cybersecurity CompTIA Security+</a></h4>
-		<p>
-			Preparing participants to pass the CompTIA Security+ exam: baseline skills to perform core security functions for compensation.</p>
-	</li>-->
-	<!--<li>
-		<h4>
-			<a href="/education/k-12-outreach/alumni">Alumni</a></h4>
+	<li>
+		<h5>
+			<a href="/education/k-12-outreach/students/impact">Impact</a></h5>
 		<p>
 			(Pending page content to describe)</p>
 	</li>-->
-	<!--<li>
-		<h4>
-			<a href="/education/k-12-outreach/impact">Impact</a></h4>
-		<p>
-			(Pending page content to describe)</p>
-	</li>-->
-</ul>
+	
+<h4>Alumni Scholarship</h4>
+	<div class="row">
+	<div class="col-sm-4">
+		<div style="min-height:200px; background-color: #E4E4E4; padding: 10px; margin: 10px 0px; border: solid 1px #cccccc;">
+			<h5>
+				<a href="/education/k-12-outreach/students/alumni/susan-fratkin-scholarship">Susan Fratkin Scholarship</a></h5>
+			<p>An annual scholarship honoring HPC ambassador Susan Fratkin, awarded to Code@TACC alumni in STEM disciplines.</p>
+		</div>
+	</div>
+</div>
