chore: rt-24099 cms update code-at-tacc--connected

--- a/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
+++ b/web-content/root/education/k-12-outreach/students/code-at-tacc-connected.html
@@ -51,15 +51,15 @@
 			<!-- OPEN: Close on Date. --><!--
 			<p class="data-banner__content">
 				Application closes _Month_ _DATE_, _YEAR_</p>
-			--><!-- OPEN: Close on Date. Notify by Date -->
-			<!--<p class="data-banner__content  small">
+			--><!-- OPEN: Close on Date. Notify by Date --><!--<p class="data-banner__content  small">
 				Application closes May 5, 2022. Students to be notified of acceptance on May 13, 2022.</p>
 			--><!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			--><!-- CLOSED: Simple -->
 			<p class="data-banner__content">
-				Check back in January 2023 for future opportunities.</p></div>
+				Check back in January 2023 for future opportunities.</p>
+		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
 				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
@@ -127,7 +127,8 @@
 						<li>
 							<a href="/documents/1084364/1736606/YPP-Communication-Plan-Overnight-Camp-%28Connected%29-2022+Spanish.pdf" target="_blank">2022 Y.P.P. Communication Plan - Español</a></li>
 					</ul>
-				</div></div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
